@@ -1,3 +1,8 @@
+Sat Dec 28 21:06:43 1996  Sam Hartman  <hartmans@luminous.MIT.EDU>
+
+	* login.c: Force environment variables like HOME to be set even if
+ 	-p given.
+
 Tue Dec 24 16:08:41 1996  Tom Yu  <tlyu@mit.edu>
 
 	* configure.in: Fix up "test $ac_cv_c_cross" to deal with
